--- a/FacebookFriends/res/layout/activity_main.xml
+++ b/FacebookFriends/res/layout/activity_main.xml
@@ -12,11 +12,12 @@
         android:layout_gravity="center_horizontal"
         android:layout_margin="30dp"
         android:src="@drawable/login_button" />
-
+
     <TextView
         android:id="@+id/txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:text="@string/text" />
 
     <Button
