--- a/FacebookFriends/res/layout/friend_detail.xml
+++ b/FacebookFriends/res/layout/friend_detail.xml
@@ -3,24 +3,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-
-    <ImageView
-        android:id="@+id/big_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_action_search" />
-
+
     <TextView
-        android:id="@+id/tx_aboutme"
+        android:id="@+id/tx_birthday"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView" />
-
+
     <TextView
         android:id="@+id/tx_profile_url"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:autoLink="web"
+        android:clickable="true"
         android:text="TextView" />
 
     <TextView
@@ -31,19 +26,7 @@
         android:text="TextView" />
 
     <TextView
-        android:id="@+id/tx_birthday"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
-
-    <TextView
-        android:id="@+id/tx_employer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
-
-    <TextView
-        android:id="@+id/tx_position"
+        android:id="@+id/tx_aboutme"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView" />
